--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
+  "engines": {
+    "npm": "5.6.0",
+    "node": "8.11.3"
+  },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
